# Exoquad-Experiments

./: .gitmodules  CMakeLists.txt  Project.toml  README.md
BeylkinQuad/: README.md
BeylkinQuad/src/: GaussQuadrature.jl
BeylkinQuad/test/: runtests.jl  sandbox.jl
ExoQuad/: README.md
ExoQuad/Config/: TasmanianConfig.in.hpp
ExoQuad/InterfacePython/: strided_gauss_legendre.py
ExoQuad/SparseGrids/: tsgLinearSolvers.hpp
Exoquad-Experiments/julia/: Project.toml
Exoquad-Experiments/julia/src/: ExpGauss.jl
Exoquad-Experiments/python/: exoquad_misc.py
InterfacePython/: CMakeLists.txt  ExoquadUtils.py  exoquad.py  exoquad_1D.py  exoquad_basics.py  exoquad_nD.py
SparseGrids/: gridtestExternalTests.cpp
cmake/: CMakeLists.txt  tasmanian.CMakeLists.txt
scripts/: AbsSinExp.py  AntennaExp.py  CMakeLists.txt  GenerateData.in.py  GeneratePlots_1D.in.py  GeneratePlots_nD1.in.py  GeneratePlots_nD2.in.py  GeneratePlots_nD3.in.py  QuadSincExp.py  SincExp.py  SqrSincExp.py  SumSincExp.py  beylkin_antenna.in.jl  beylkin_antenna.jl  exoquad.in.py  exoquad_1D.py
src/: CMakeLists.txt  ExoquadUtils.py  ExpGauss.jl  Project.toml
